--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,7 +5,7 @@ homeassistant:
   elevation: !secret home_elevation
   unit_system: metric
   time_zone: Europe/Amsterdam
-  customize: !include config/customize.yaml
+  customize: !include customize.yaml
   packages: !include_dir_named packages
   auth_providers:
     - type: trusted_networks
