lovelace configuration splitted

--- a/config/recorder.yaml
+++ b/config/recorder.yaml
@@ -17,3 +17,4 @@ include:
     - sensor.woonkamer_multisensor_relative_humidity
     - weather.buienradar_enschede
     - sensor.enschede_temperatuur
+    - climate.driesprong
