--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -17,414 +17,10 @@ resources:
     type: module
 
 views:
-### Home Tab
-  - title: Home
-    icon: mdi:home
-    popup_cards:
-      light.keuken:
-        title: Keuken
-        card:
-          type: entities
-          entities:
-            - entity: light.eettafel
-              name: Eettafel
-              type: custom:slider-entity-row
-              hide_toggle: true
-            - entity: light.keuken_raam_spotjes
-              name: Raam spotjes
-              type: custom:slider-entity-row
-              hide_toggle: true
-            - entity: light.keuken_kookplaat_spotjes
-              name: Kookplaat spotjes
-      light.eettafel: light.keuken
-      light.woonkamer_plafond:
-        title: Woonkamer
-        card:
-          type: entities
-          entities:
-            - entity: light.woonkamer_plafond
-              name: Plafond
-              type: custom:slider-entity-row
-              hide_toggle: true
-            - entity: light.woonkamer_tv_backlight
-              name: TV backlight
-            - entity: light.woonkamer_staandelamp
-              name: Staande lamp
-            - entity: light.dressoir_dimmer
-              name: Dressoir
-              type: custom:slider-entity-row
-              hide_toggle: true
-#            - entity: switch.kerstboom
-#              name: Kerstboom
-      light.woonkamer_zithoek: light.woonkamer_plafond
-      light.dressoir_dimmer: light.woonkamer_plafond
-      switch.kerstboom: light.woonkamer_plafond
-
-    cards:
-      - type: horizontal-stack
-        cards:
-          - type: entity-button
-            entity: light.eettafel
-            tap_action:
-              action: toggle
-            hold_action: 
-              action: more-info
-          - type: entity-button
-            entity: light.keuken
-            tap_action: 
-              action: toggle
-            hold_action: 
-              action: more-info
-      - type: horizontal-stack
-        cards:
-          - type: entity-button
-            name: Woonkamer
-            entity: light.woonkamer_plafond
-            tap_action: 
-              action: toggle
-            hold_action: 
-              action: more-info
-          - type: entity-button
-            name: Zithoek
-            entity: light.woonkamer_zithoek
-            tap_action: 
-              action: toggle
-            hold_action: 
-              action: more-info
-      - type: horizontal-stack
-        cards:
-          - type: entity-button
-            name: Alles uit
-            icon: mdi:power
-            entity: scene.welterusten
-            tap_action: 
-              action: call-service
-              service: scene.turn_on
-              service_data:
-                entity_id: scene.welterusten
-          - type: entity-button
-            name: Dressoir
-            entity: light.dressoir_dimmer
-            tap_action: toggle
-            hold_action: more-info
-#          - type: entity-button
-#            name: Kerstboom
-#            entity: switch.kerstboom
-#            tap_action: toggle
-#            hold_action: more-info
-
-      - title: Wasmachine
-        type: entities
-        show_header_toggle: false
-        entities:
-          - entity: sensor.wasmachine_status
-            secondary_info: last-changed
-          - sensor.wasmachine_power
-
-      - title: Woonkamer
-        show_header_toggle: false
-        type: entities
-        entities:
-          - entity: sensor.woonkamer_multisensor_temperature
-            name: Temperatuur
-          - entity: sensor.woonkamer_multisensor_relative_humidity
-            name: Vochtigheid
-      - title: Muziekkamer
-        show_header_toggle: false
-        type: entities
-        entities:
-          - entity: sensor.muziekkamer_temperature
-            name: Temperatuur
-          - entity: sensor.muziekkamer_relative_humidity
-            name: Vochtigheid
-      - title: Enschede
-        type: weather-forecast
-        entity: weather.buienradar_enschede
-### Climate Tab
-  - title: Verwarming
-    icon: mdi:thermometer-lines
-    cards:
-      - type: custom:simple-thermostat
-        name: Vloerverwarming
-        entity: climate.driesprong
-        tap_action:
-          action: none
-        sensors:
-          - entity: sensor.woonkamer_multisensor_relative_humidity
-            name: Vochtigheid
-      - type: custom:mini-graph-card
-        name: Temperatuur
-        align_icon: left
-        align_header: left
-        points_per_hour: 4
-        hour24: true
-        entities:
-          - entity: sensor.woonkamer_multisensor_temperature
-            name: Woonkamer
-            show_fill: false
-          - entity: sensor.muziekkamer_temperature
-            name: Muziekkamer
-            show_fill: false
-          - entity: sensor.enschede_temperatuur
-            name: Buiten
-            show_fill: true
-
-### Afval Tab
-  - title: Afval
-    icon: mdi:recycle
-    cards:
-      - type: glance
-        title: Volgende lichting
-        entities:
-          - entity: sensor.organic_waste_pickup
-          - entity: sensor.paper_waste_pickup
-          - entity: sensor.plastic_waste_pickup
-          - entity: sensor.non_recyclable_waste_pickup
-      - type: horizontal-stack
-        cards:
-          - entity: sensor.waste_pickup_today
-            # TODO: titel 'Vandaag' anders toevoegen en default name gebruiken
-            name: Vandaag
-            state_image:
-              unknown: /local/icons/kliko3.png
-              organic_waste_pickup: /local/icons/gft3.png
-              plastic_waste_pickup: /local/icons/plastic3.png
-              paper_waste_pickup: /local/icons/papier3.png
-              non_recyclable_waste_pickup: /local/icons/rest3.png
-            show_state: false
-            type: picture-entity
-          - entity: sensor.waste_pickup_tomorrow
-            name: Morgen
-            state_image:
-              unknown: /local/icons/kliko3.png
-              organic_waste_pickup: /local/icons/gft3.png
-              plastic_waste_pickup: /local/icons/plastic3.png
-              paper_waste_pickup: /local/icons/papier3.png
-              non_recyclable_waste_pickup: /local/icons/rest3.png
-            show_state: false
-            type: picture-entity
-      - type: entities
-        show_header_toggle: false
-        entities:
-          - entity: input_boolean.notify_trash
-          - type: call-service
-            name: Trigger notificatie vandaag
-            action_name: Trigger
-            service: automation.trigger
-            service_data:
-              entity_id: automation.afval_vandaag
-          - type: call-service
-            name: Trigger notificatie morgen
-            action_name: Trigger
-            service: automation.trigger
-            service_data:
-              entity_id: automation.afval_morgen
-
-  - title: Verlichting
-    icon: mdi:lightbulb
-    cards:
-      - title: Woonkamer
-        type: entities
-        entities:
-          - entity: light.woonkamer_plafond
-            name: Plafond
-            type: custom:slider-entity-row
-          - entity: light.woonkamer_tv_backlight
-            name: TV backlight
-          - entity: light.woonkamer_staandelamp
-            name: Staande lamp
-          - entity: light.dressoir_dimmer
-            name: Dressoir
-            type: custom:slider-entity-row
-          - entity: switch.kerstboom
-            name: Kerstboom
-      - title: Keuken
-        type: entities
-        entities:
-          - entity: light.eettafel
-            name: Eettafel
-            type: custom:slider-entity-row
-          - entity: light.keuken_raam_spotjes
-            name: Raam spotjes
-            type: custom:slider-entity-row
-          - entity: light.keuken_kookplaat_spotjes
-            name: Kookplaat spotjes
-
-  - title: Omgeving
-    icon: mdi:chart-areaspline
-    cards:
-      - type: vertical-stack
-        cards:
-          - type: history-graph
-            title: Temperatuur
-            entities:
-              - entity: sensor.enschede_temperatuur
-                name: Buiten
-              - entity: sensor.woonkamer_multisensor_temperature
-                name: Woonkamer
-              - entity: sensor.muziekkamer_temperature
-                name: Muziekkamer
-          - type: horizontal-stack
-            cards:
-            - type: gauge
-              name: Woonkamer
-              entity: sensor.woonkamer_multisensor_temperature
-              min: 10
-              max: 30
-              severity:
-                yellow: 0
-                green: 20
-                red: 24
-            - type: gauge
-              name: Muziekkamer
-              entity: sensor.muziekkamer_temperature
-              min: 10
-              max: 30
-              severity:
-                yellow: 0
-                green: 20
-                red: 24
-      - type: vertical-stack
-        cards:
-          - type: history-graph
-            title: Luchtvochtigheid
-            entities:
-              - entity: sensor.woonkamer_multisensor_relative_humidity
-                name: Woonkamer
-              - entity: sensor.muziekkamer_relative_humidity
-                name: Muziekkamer
-          - type: horizontal-stack
-            cards:
-            - type: gauge
-              name: Woonkamer
-              entity: sensor.woonkamer_multisensor_relative_humidity
-              min: 0
-              max: 100
-              severity:
-                yellow: 0
-                green: 40
-                red: 60
-            - type: gauge
-              name: Muziekkamer
-              entity: sensor.muziekkamer_relative_humidity
-              min: 0
-              max: 100
-              severity:
-                yellow: 0
-                green: 40
-                red: 60
-
-  - title: System
-    icon: mdi:settings
-    cards:
-      - type: custom:tracker-card
-        title:
-        trackers:
-          - sensor.custom_component_tracker
-          - sensor.custom_card_tracker
-      - type: custom:monster-card
-        card:
-          title: Pi Processes
-          type: glance
-        filter:
-          include:
-            - entity_id: "sensor.process_*"
-      - type: vertical-stack
-        cards:
-        - type: gauge
-          title: CPU usage
-          entity: sensor.processor_use
-          severity:
-            green: 0
-            yellow: 30
-            red: 70
-        - type: gauge
-          title: Disk usage
-          entity: sensor.disk_use_percent
-          severity:
-            green: 0
-            yellow: 60
-            red: 85
-        - type: gauge
-          title: Memory usage
-          entity: sensor.memory_use_percent
-          severity:
-            green: 0
-            yellow: 50
-            red: 80
-      - type: custom:monster-card
-        card:
-          title: Batterijen
-          type: entities
-          show_header_toggle: false
-        filter:
-          include:
-            - entity_id: "sensor.*battery*"
-          exclude:
-            - entity_id: "sensor.*battery_state"
-      - type: custom:monster-card
-        card:
-          title: Energieverbruik
-          type: entities
-          show_header_toggle: false
-        filter:
-          include:
-            - entity_id: "sensor.*power"
-          
-  - title: All Entities
-    icon: mdi:home-assistant
-    cards:
-      - type: custom:monster-card
-        card:
-          title: Z-Wave
-          type: entities
-        filter:
-          include:
-            - domain: zwave
-              options:
-                secondary_info: entity-id
-#      - type: custom:monster-card
-#        card:
-#          title: All Devices
-#          type: glance
-#        filter:
-#          include:
-#            - domain: device_tracker
-      - type: custom:monster-card
-        card:
-          title: All Lights
-          type: entities
-          show_header_toggle: False
-        filter:
-          include:
-            - domain: light
-      - type: custom:monster-card
-        card:
-          title: All Switches
-          type: entities
-          show_header_toggle: False
-        filter:
-          include:
-            - domain: switch
-      - type: custom:monster-card
-        card:
-          title: All Sensors
-          type: entities
-        filter:
-          include:
-            - domain: sensor
-              options:
-                secondary_info: entity-id
-            - domain: binary_sensor
-              options:
-                secondary_info: entity-id
-      - type: custom:monster-card
-        card:
-          title: All Automations
-          type: entities
-        filter:
-          include:
-            - domain: automation
-              options:
-                secondary_info: entity-id
-
+  - !include lovelace/home.yaml
+  - !include lovelace/climate.yaml
+  - !include lovelace/afval.yaml
+  - !include lovelace/verlichting.yaml
+  - !include lovelace/omgeving.yaml
+  - !include lovelace/system.yaml
+  - !include lovelace/all_entities.yaml 
