--- a/configuration.yaml
+++ b/configuration.yaml
@@ -56,7 +56,16 @@ ios:
 sun:
 system_health:
 
-zwave: !include config/zwave.yaml
+zwave:
+  usb_path: /dev/ttyACM0
+  network_key: !secret zwave_network_key
+  device_config: !include zwave_device_config.yaml
+  device_config_glob:
+    "sensor.*_sourcenodeid*":
+      ignored: true
+    "sensor.*_exporting*":
+      ignored: true
+
 recorder: !include config/recorder.yaml
 
 influxdb: !include config/influxdb.yaml
