Lovelace config uitgebreid: update postnl en simple-thermostat, etc.

--- a/config/recorder.yaml
+++ b/config/recorder.yaml
@@ -18,3 +18,4 @@ include:
     - weather.buienradar_enschede
     - sensor.enschede_temperatuur
     - climate.driesprong
+    - binary_sensor.updater
